# rust101

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
data-in-depth/: Cargo.toml
data-in-depth/src/: main.rs
elipu/: Cargo.toml
elipu/src/: main.rs
elpbf/: Cargo.toml
elpbf/src/: lib.rs
elpbf/src/hello/: main.rs
fibonacci-1/: Cargo.toml
fibonacci-1/src/: main.rs
fibonacci-1/src/fibonacci/: dynamic.rs  mod.rs  rec.rs
frominto/: Cargo.toml
frominto/src/: main.rs
hello-world/src/: main.rs
linked-list/: Cargo.toml
linked-list/src/: main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
matrix/: Cargo.toml
matrix/src/: main.rs  sample.csv
ownership/src/: main.rs
phonebook/: Cargo.toml
phonebook/src/: main.rs
phonebook/src/contact/: mod.rs
phonebook/src/phonebook/: mod.rs
rcalc/: Cargo.toml
rcalc/src/: main.rs
rcalc/src/parsemath/: token.rs  tokenizer.rs
rds/: Cargo.toml
rds/src/: lib.rs
rds/src/heap/: mod.rs
recho/: Cargo.toml
recho/src/: main.rs
slices/: Cargo.toml
slices/src/: main.rs
src/: main.rs
tryfrom/: Cargo.toml
tryfrom/src/: main.rs
word-count-parham/: Cargo.toml  test.txt
word-count-parham/src/: main.rs
